--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -206,7 +206,7 @@ body {
     justify-content: space-between;
     height: 0;
     transition: all 0.4s ease-out;
-    background-color: var(--color-white-fixed);
+    background-color: var(--color-white-dark);
    
     h1.logo {
       width: 150px;
@@ -238,8 +238,7 @@ body {
         height:200px;
         border-bottom: 1px solid var(--color-border);
         .one {
-          color: var(--color-primary);
-          background: var(--color-white-fixed);
+          
         }
       }
 
@@ -251,7 +250,8 @@ body {
         justify-content: center;
         width:120px;
         gap: 6px;
-        color: var(--color-primary);
+        color: var(--color-primary-text);
+        background: var(--color-white-dark);
         // background: var(--color-primary);
         transition: all 0.4s ease-out;
         position:relative;
@@ -260,7 +260,7 @@ body {
 
         &:hover {
           color: var(--color-white-fixed);
-            background: var(--color-primary);
+          background: var(--color-primary);
           .two-depth {
             top: 48px;
             opacity: 1;
